--- a/LaplacianMechDP.ipynb
+++ b/LaplacianMechDP.ipynb
@@ -42,7 +42,7 @@
         "epsilon=2.5\n",
         "data=np.random.uniform(low=0.0,high=1.0,size=100)\n",
         "print(data)\n",
-        "lap_data=data[(data>0.5) & (data<0.75)].shape[0]+np.random.laplace(loc=0,scale=1/epsilon)\n",
+        "lap_data=data[(data>0.5) & (data<0.75)].size+np.random.laplace(loc=0,scale=1/epsilon)\n",
         "print(lap_data)"
       ],
       "execution_count": 8,
